2004-03-30  Alex Paulis and Cameron Taylor  <ctaylor@waverider.com>

	* include/sys/select.h: set FD_SETSIZE to CYGNUM_FILEIO_NFD
	when appropriate.

2004-03-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/isoinfra.cdl: Typo: CYGBLD_ISO_STDIO_FILEPOS ->
	CYGBLD_ISO_STDIO_FILEPOS_HEADER.

	* include/limits.h: Avoid potential illegal recursion if
	already been included by GCC's limits.h.

	* include/stdio.h: Include stdarg.h to save duplication.
	Give fileno(),fdopen() throw specifiers.

	* include/unistd.h: Prototype for rename() lives in stdio.h.

2004-01-07  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/sys/select.h: Only declare pselect() when posix signals are
	included.

2003-07-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h (S_ISGID): Please, somebody teach me to count!

2003-07-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h :S_I[RWX]{USR|GRP|OTH} etc changed so they
	don't overlap with S_ISLINK and S_ISSOCK. Reported by Scott
	Wilkinson.

2003-06-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h: S_IFFIFO defies logic and should be called
	S_IFIFO!

2003-05-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h (S_IF*): Added macros to test the type of a
	file.

2003-05-23  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/sys/stat.h: Added various S_IF macros for the st_mode
	flags.

2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/mqueue.h: Define POSIX 1003.1d draft mq_timedsend() and
	mq_timedreceive() functions.

2002-12-12  Bart Veer  <bartv@ecoscentric.com>

	* include/stdlib.h: #include cyg_type.h, now that this header
	uses NORET attributes

2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* include/sys/types.h: Add define/undefine for __NEED_FD_SETS_ONLY
	around include of sys/select.h to avoid circular dependencies in
	headers.

	* include/sys/select.h: Reorganized definitions so that the
	include from sys/types.h only defines the fd_set type and macros